Fixed cookie box colour contrast

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -53,7 +53,7 @@ $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #5a6469,
   secondary: #77878e,
-  success: #3adb76,
+  success: #28c382,
   warning: #ffae00,
   alert: #ec5840,
 );
