--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1243,6 +1243,24 @@ footer,
     position: fixed;
     text-align: center;
     width: 100%;
+
+    .button {
+        &.cookie {
+            background: scale-color($dark-blue-gray, $lightness: -40%);
+
+            &:hover {
+                background: #000;
+            }
+        }
+    }
+
+    .success {
+        color: #000;
+
+        &:hover {
+            color: #000;
+        }
+    }
 }
 
 /** More media queries **/
